<resources>
    <string name="app_name">Taxi</string>
    <string name="codepage">windows-1251</string>
    <string name="km">км</string>
    <string name="choose_region">Выберите регион</string>
    <string name="set">Задать</string>
    <string name="str_1">Отмечен</string>
    <string name="night">Ночь</string>
    <string name="header_order">Заказ</string>
    <string name="screen_settings_title">Настройки</string>
    <string name="screen_find_street_title">Поиск улицы</string>
    <string name="screen_main_panel_taxo_gps_accuracy">GPS</string>
    <string name="take_order">Взять заказ</string>
    <string name="vlet">Влет</string>
    <string name="allow_vlet">Получать заказы влет?</string>
    <string name="allow_vlet_succesesful">Параметры раздачи Влет успешно заданы</string>
    <string name="ira_set_succesesful">Радиус успешно задан</string>
    <string name="rosa_set_succesesful">Регионы установлены</string>
    <string name="rosa_set_clear">Ни один регион не был выбран, функция выключена</string>
    <string name="dialog_title">Периодичность обновления расклада (cек)</string>
    <string name="summary">Текущее значение: %1$d</string>
    <string name="dialog_title_colunms">Число колонок расклада (0 - авто)</string>
    <string name="summary_colunms">Текущее значение: %1$d</string>
    <string name="server">Сервер</string>
    <string name="address_getting">Получение адресов</string>
    <string name="new_version_message_toast">Есть новая версия. Обновите программу.</string>
    <string name="add_1_str_1">Время в пути</string>
    <string name="add_1_str_2">Платный пробег</string>
    <string name="add_1_str_3">Платный простой</string>
    <string name="add_1_str_4">Плата за проезд</string>
    <string name="add_1_str_5">Точки</string>
    <string name="add_1_str_6">Ошибка</string>
    <string name="add_1_str_7">Ошибка!</string>
    <string name="find_street_header_tip">Введите 3 и более букв названия улицы</string>
    <string name="layout_add_1_str_1">Выберите время доезда</string>
    <string name="layout_add_1_str_2">Не знаю</string>
    <string name="layout_add_1_str_3">Подтвердите</string>
    <string name="layout_add_1_str_4">Выберите время доезда</string>
    <string name="layout_add_1_str_5">Отказаться</string>
    <string name="layout_add_1_str_6">История заказов</string>
    <string name="layout_add_1_str_7">Итоговая статистика</string>
    <string name="layout_add_1_str_8">Оплаченный километраж</string>
    <string name="layout_add_1_str_9">Платный простой</string>
    <string name="layout_add_1_str_10">Количество заказов</string>
    <string name="layout_add_1_str_11">Касса</string>
    <string name="layout_add_1_str_12">Посадка</string>
    <string name="no_attributes_message">Нет параметров для выбора</string>
    <string name="main_activity_menu_attributes">Параметры перевозки</string>
    <string name="main_activity_menu_usefulnews">Полезное</string>
    <string name="ctx_menu_main_getnearestgpsorderslist">Ближайшие заказы по GPS</string>
    <string name="main_activity_action_reqest_nearest_gps">Показать список ближайших по GPS заказов?</string>
    <string name="main_activity_action_reqest_gps_settings_on">Перейти в настройки, чтобы включить GPS?</string>
    <string name="main_activity_action_gps_not_enable">Координаты GPS еще не доступны</string>
    <string name="main_menu_connect">Connect</string>
    <string name="main_menu_about">О программе</string>
    <string name="main_menu_exit">Выход</string>
    <string name="ctx_menu_yellow_orders">Заказы</string>
    <string name="ctx_menu_yellow_queue">Очередь</string>
    <string name="ctx_menu_main_activation">Активация</string>
    <string name="ctx_menu_main_connect">Соединить</string>
    <string name="ctx_menu_main_balance">Баланс</string>
    <string name="ctx_menu_main_confirm">Подтвердите</string>
    <string name="ctx_menu_main_waiting">Ожидаю</string>
    <string name="ctx_menu_main_incar">В машине</string>
    <string name="ctx_menu_main_finish">Закончил</string>
    <string name="ctx_menu_main_setlocation">Отметиться</string>
    <string name="ctx_menu_main_changelocationbystreet">Отметиться по адресу</string>
    <string name="ctx_menu_main_needredial">Поторопите</string>
    <string name="ctx_menu_main_getdrivers">Расклад</string>
    <string name="ctx_menu_main_messages">Сообщения</string>
    <string name="ctx_menu_main_getnumber">Очередь</string>
    <string name="ctx_menu_main_calloperator">Звонок</string>
    <string name="ctx_menu_main_getorderslist">Заказы</string>
    <string name="ctx_menu_main_getnearestorderslist">Ближайшие заказы</string>
    <string name="ctx_menu_main_go_online">На линию</string>
    <string name="ctx_menu_main_go_offline">Сойти</string>
    <string name="ctx_menu_main_show_timer">Показать таймер ожидания</string>
    <string name="ctx_menu_main_show_timer_to_client">Показать таймер доезда</string>
    <string name="ctx_menu_main_show_map">Карта</string>
    <string name="main_activity_notif">Нажмите, чтобы перейти</string>
    <string name="main_activity_menu_activation_title">Активация</string>
    <string name="main_activity_menu_connect_title">Разъединен</string>
    <string name="main_activity_menu_state_0_title">Не на линии</string>
    <string name="main_activity_menu_state_1_title">Свободен</string>
    <string name="main_activity_menu_state_3_title">Прерыв</string>
    <string name="main_activity_menu_state_4_title">Сломался</string>
    <string name="main_activity_menu_state_21_title">Подтвердите</string>
    <string name="main_activity_menu_state_22_title">Едем</string>
    <string name="main_activity_menu_state_23_title">Подъехал</string>
    <string name="main_activity_menu_state_24_title">В курсе</string>
    <string name="main_activity_menu_state_25_title">В машине</string>
    <string name="main_activity_menu_state_26_title">+ подтв</string>
    <string name="main_activity_menu_state_27_title">Влет</string>
    <string name="main_activity_dialog_yes">Да</string>
    <string name="main_activity_dialog_no">Нет</string>
    <string name="main_activity_dialog_close">Закрыть</string>
    <string name="main_activity_yellow_title">Регион</string>
    <string name="main_activity_yellow_item_1">Отметиться</string>
    <string name="main_activity_yellow_item_2">Заказы</string>
    <string name="main_activity_out_title">Тариф</string>
    <string name="main_activity_out_item_1">Городской</string>
    <string name="main_activity_out_item_2">Загородный</string>
    <string name="main_activity_unlim_message">Управление безлимитом</string>
    <string name="main_activity_unlim_on">Прол.ВКЛ</string>
    <string name="main_activity_unlim_off">Прол.ВЫК</string>
    <string name="main_activity_unlim_list">Тарифы</string>
    <string name="main_activity_unlim_title">Выберите тариф</string>
    <string name="main_activity_call_title">Звонок</string>
    <string name="main_activity_call_operator_1">Оператору</string>
    <string name="main_activity_call_client_1">Клиенту</string>
    <string name="main_activity_call_operator_2">Звонок оператору</string>
    <string name="main_activity_call_client_2">Звонок клиенту</string>
    <string name="main_activity_news">Новости</string>
    <string name="main_activity_menu_raz_options_title">Параметры раздачи</string>
    <string name="main_activity_menu_raz_options_vlet_on">Разрешить влет</string>
    <string name="main_activity_menu_raz_options_auto_r">Радиус автораздачи</string>
    <string name="main_activity_menu_raz_options_roza">Регион окончания заказа</string>
    <string name="main_activity_menu_taxo_stat">Стат. таксометра</string>
    <string name="main_activity_menu_options">Настройки</string>
    <string name="main_activity_menu_about">О программе</string>
    <string name="main_activity_menu_exit">Выход</string>
    <string name="main_activity_on_back_exit">Выйти?</string>
    <string name="main_activity_alarm">Тревога!</string>
    <string name="main_activity_taxometer_unload">Таксометр: Высадить пассажира? Показания счетчика обнулятся. Вы уверены?</string>
    <string name="main_activity_is_exit">Выйти?</string>
    <string name="main_activity_version_current">Текущая версия:</string>
    <string name="main_activity_version_control">Контроль:</string>
    <string name="main_activity_version_update">Обновить до версии:</string>
    <string name="main_activity_is_call_operator">Позвонить оператору?</string>
    <string name="main_activity_is_call_client">Позвонить клиенту?</string>
    <string name="main_activity_call_unable">Звонок недоступен</string>
    <string name="main_activity_waiting_timer_title">Время ожидания</string>
    <string name="main_activity_waiting_timer_hint">(долгое нажатие скрывает)</string>
    <string name="main_activity_to_client_timer_title">Время до клиента</string>
    <string name="main_activity_to_client_timer_hint">(долгое нажатие скрывает)</string>
    <string name="str_1_title">Баланс</string>
    <string name="str_1_summary">При нажатии Баланс - управлять безлимитом</string>
    <string name="cat_2_title">Таксометр</string>
    <string name="cat_2_pos_1_summary">Произносить после стоимости фразу про чаевые</string>
    <string name="cat_2_pos_1_title">Чаевые</string>
    <string name="cat_2_pos_2_summary">Показывать вкладку таксометра</string>
    <string name="cat_2_pos_2_title">Показывать</string>
    <string name="cat_3_pos_1_summary">Использовать (дополнительно)сотовую сеть для определения местоположения</string>
    <string name="cat_3_pos_2_title">Автоотмечание</string>
    <string name="cat_3_pos_2_summary">Автоматически отмечать по координатам GPS</string>
    <string name="cat_4_title">Радиус автораздачи</string>
    <string name="cat_4_pos_1_summary">Нужен ли запрос на подтверждение операции</string>
    <string name="cat_4_pos_1_title">Подтверждать</string>
    <string name="cat_5_title">Расклад</string>
    <string name="cat_6_title">Число колонок (0 - авто)</string>
    <string name="cat_7_title">Размер верхней панели</string>
    <string name="cat_7_pos_1_title">Увеличение отступов верхней панели (%)</string>
    <string name="cat_7_pos_1_summary">Отступы: %1$d</string>
    <string name="cat_sound_title">Звук</string>
    <string name="cat_sound_not_title">Звук фоновых уведомлений</string>
    <string name="cat_sound_pos_1_title">Звук уведомления</string>
    <string name="cat_sound_pos_1_summary">Стандартный</string>
    <string name="str_8_title">Звук уведомления</string>
    <string name="str_8_summary">Выберите звук</string>
    <string name="cat_sound_pos_3_title">Громкость (%)</string>
    <string name="cat_sound_pos_3_summary">Задайте громкость %1$d</string>
    <string name="cat_9_title">Соединение</string>
    <string name="cat_9_pos_1_summary">Автоматически соединяться с сервером при запуске</string>
    <string name="cat_10_title">Подтверждение</string>
    <string name="cat_10_pos_1_title">Заказ</string>
    <string name="cat_10_pos_1_summary">Нужен ли запрос на подтверждение операции при получении заказа</string>
    <string name="cat_11_title">Карта</string>
    <string name="cat_11_pos_1_title">Показывать маршрут</string>
    <string name="cat_11_pos_1_summary">Нужно ли прокладывать маршрут</string>
    <string name="cat_11_pos_2_title">Периодичность обновления маршрута (cек)</string>
    <string name="cat_11_pos_2_summary">Текущее значение: %1$d</string>
    <string name="screen_activation_user">Позывной</string>
    <string name="screen_activation_pass">Код активации</string>
    <string name="screen_activation_choice">Выбор</string>
    <string name="screen_activation_city">Город</string>
    <string name="screen_activation_activation">Активация</string>
    <string name="cat_12_title">Сообщения</string>
    <string name="cat_12_pos_1_title">Цветовая раскраска</string>
    <string name="cat_12_pos_1_summary">Нужно ли выделять ключевые моменты сообщения цветом</string>
</resources>